--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "langchain-gigachat"
-version = "0.2.1"
+version = "0.2.1beta1"
 description = "An integration package connecting GigaChat and LangChain"
 authors = []
 readme = "README.md"
