--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "langchain-gigachat"
-version = "0.2.1beta2"
+version = "0.2.2b2"
 description = "An integration package connecting GigaChat and LangChain"
 authors = []
 readme = "README.md"
@@ -17,13 +17,9 @@ disallow_untyped_defs = "True"
 module = "transformers"
 ignore_missing_imports = true
 
-[tool.poetry.urls]
-"Source Code" = "https://github.com/langchain-ai/langchain/tree/master/libs/partners/openai"
-"Release Notes" = "https://github.com/langchain-ai/langchain/releases?q=tag%3A%22langchain-openai%3D%3D0%22&expanded=true"
-
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-langchain-core = "^0.3"
+langchain-core = "^0.3.8"
 gigachat = "^0.1.35"
 
 [tool.ruff.lint]
